[package]
name = "typst_live"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.84" # newest wasm-bindgen-cli is for 0.2.84!
once_cell = "1.18.0"
typst = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
typst-library = { git = "https://github.com/typst/typst.git", tag = "v0.6.0" }
web-sys = { version = "0.3.61", features = [
  "Node",
  "ImageData",
  "Blob",
  "BlobPropertyBag",
  "Url",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "ReadableStream",
  "console",
  "Storage",
  "Window"]}
js-sys = "0.3.61"
comemo = "0.3.0"
siphasher = "0.3.10"
flate2 = "1.0.26"
tar = "0.4.38"
wasm-bindgen-futures = "0.4.34"
hex = "0.4.3"
regex = "1.9.1"
time = "0.3.23"
base64 = "0.21.2"

[profile.release]
lto = true
